GNOME Bugzilla – Bug 734778
Object leaks in broadway_server_new() constructor
Last modified: 2014-08-15 00:32:01 UTC
Created attachment 283377 [details] [review] fix patch Missing g_object_unref() calls before returning NULL on failures.
Review of attachment 283377 [details] [review]: looks good, thanks