Fixed some object leaks in broadway_server_new() constructor.

https://bugzilla.gnome.org/show_bug.cgi?id=734778